--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "babel-loader": "^8.2.5",
+    "chromatic": "^6.9.0",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "eslint-plugin-storybook": "^0.6.4",
