--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "chromatic": "npx chromatic --project-token=8388c3e9a836"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -47,5 +48,7 @@
     "prettier": "2.7.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "4.8.2"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "courses-box@0.1.0"
 }
