--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,4 +1,4 @@
-name: 'Check'
+name: "Check"
 
 on:
   push:
@@ -11,6 +11,9 @@ on:
 jobs:
   test_and_lint:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
       - uses: actions/checkout@v2
         with:
