--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -21,4 +21,5 @@ jobs:
       - name: Publih to Chromatic
         uses: chromaui/action@v1
         with:
+          workingDir: frontend
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
