--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "@emotion/styled": "^11.10.4",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
