--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.0",
+    "react-redux": "^8.0.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -49,9 +50,11 @@
     "eslint-plugin-storybook": "^0.6.4",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
+    "msw": "^0.47.3",
     "prettier": "2.7.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "typescript": "4.8.2"
+    "typescript": "4.8.2",
+    "whatwg-fetch": "^3.6.2"
   },
   "readme": "ERROR: No README data found!",
   "_id": "courses-box@0.1.0"
